# vite-bevy-trial

./: .eslintrc.yml  .prettierrc.yml  CHANGELOG.md  README.md  index.css  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/actions/build_rust_and_upload/: action.yml
.github/actions/build_rust_dev/: action.yml
.github/actions/build_vite/: action.yml
.github/actions/build_wasm_pack/: action.yml
.github/actions/build_windows_and_upload/: action.yml
.github/actions/cache_cargo/: action.yml
.github/workflows/: main.yml
assets/: index-3ffyEBQr.js  index-PUQtp60N.css
src/: main.tsx
src/features/game/: game.page.tsx  index.tsx
src/features/game/components/: game.tsx
src/provider/: index.tsx
src/routes/: index.tsx
wasm/.devcontainer/: devcontainer.json
wasm/bevy-app/: .gitignore  Cargo.toml  Makefile.toml
wasm/bevy-app/src/: app.rs  lib.rs
